apps/base/kube-prometheus/grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: 'true'
    cert-manager.io/cluster-issuer: letsencrypt-production
    # kubernetes.io/ingress.class: nginx
    nginx.org/server-snippets: |
      location /api/live/ {
        proxy_http_version 1.1;
        proxy_set_header Upgrade $http_upgrade;
        proxy_set_header Connection $connection_upgrade;
        proxy_set_header Host $http_host;
        proxy_pass http://grafana.monitoring.svc.cluster.local:3000;
      }
  name: grafana02-kontur-io
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: grafana02.kontur.io
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - grafana02.kontur.io
      secretName: grafana02-kontur-io-tls
